--- a/web/MapStatsWeb/Views/Shared/_Layout.cshtml
+++ b/web/MapStatsWeb/Views/Shared/_Layout.cshtml
@@ -16,10 +16,9 @@
     </environment>
 </head>
 <body>
-    <div class="jumbotron" style="padding:32px;">
+    <div class="jumbotron" style="padding:32px;margin:0px;">
         <div class="container">
             <h1>MapStats</h1>
-            <hr>
         </div>
     </div>
     <div class="container body-content">
